src/styles.css
/* You can add global styles to this file, and also import other style files */
@import '~bootstrap/dist/css/bootstrap.min.css';
@import '~highlight.js/styles/nord.css';
@import '~chart.js/dist/Chart.min.css';
@import 'assets/css/utils.css';
@import 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css';

@font-face {
    font-family: 'Whitney-Semibold Regular';
    font-style: normal;
    font-weight: normal;
    src: local('Whitney-Semibold Regular'), url('assets/fonts/whitneysemibold.woff') format('woff');
}

html {
    scroll-behavior: smooth;
}

body, mat-sidenav-content {
    color: var(--font);

    background: black;
    background: radial-gradient(circle, var(--background-primary) 0%, var(--background-secondary) 100%) !important;
    background-repeat: no-repeat;
    background-attachment: fixed;
    height: 100%;
    margin: 0;
    
    overflow-x: hidden !important;

    font-family: 'Whitney-Semibold Regular',Whitney,Helvetica Neue,Helvetica,Arial,sans-serif;
}

footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    
    padding: 5px;
    padding-bottom: 0px;
}

footer p {
    margin: 0 !important;
}

table {
    width: 100%;
}

.rounded {
    border-radius: 5px !important;
}

.side-nav img {
    background-color: var(--background-tertiary);

    max-width: 96px;
    border-radius: 50%;

    padding-bottom: 5px;
}

.side-nav .header {
    width: inherit;

    text-align: center;

    padding-top: 25px;
}

table.dataTable tbody tr {
    background-color: inherit;
}

.jumbotron {
    background-color: transparent;
}

button {
    border-radius: 25px !important;
}
button:focus {
    outline: none !important;
}

a {
    color: var(--tertiary);
    text-decoration: none !important;
    transition: all .25s;
}
a:hover {
    color: var(--secondary)
}

mat-chip a {
    color: inherit !important;
}

pre {
    color: var(--secondary);
    background-color: var(--background-tertiary);
    border-radius: 5px;

    padding: 10px;
}

/* global */
.mat-chip.mat-standard-chip {
    background-color: var(--primary) !important;
}

/* scrollbar */
::-webkit-scrollbar-track
{
    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
    background-color: var(--background-primary);
}
::-webkit-scrollbar
{
    width: 10px;
    background-color: transparent;
}
::-webkit-scrollbar-thumb
{
    border-radius: 10px;
    background-image: -webkit-gradient(linear,
        left bottom,
        left top,
        color-stop(0.72, var(--primary)),
        color-stop(0.86, var(--secondary)));
}

.desc {
    color: var(--secondary); 
}

.mat-snack-bar-container {
    background-color: rgba(0,0,0,0.8) !important;
    color: var(--font);
    width: 75vw;
}

customize-xp-card .mat-form-field-infix {
    width: inherit !important;
}

thead {
    background-color: var(--background-tertiary) !important;
}

table tbody tr {
    background-color: var(--background-primary) !important;
}

table tbody tr:nth-child(even) {
    background-color: var(--background-secondary) !important;
}

.table td, .table th {    
    border: none !important;
}

mat-paginator {
    background-color: transparent !important;
}

.mat-standard-chip .mat-chip-remove.mat-icon {
    font-size: 15px;
}

:focus {
    outline: none !important;
}

/* editor */
.container .editor-toolbar a {
    color: var(--font) !important;
}
.CodeMirror-scroll {
    max-height: 100vh !important;
}
.CodeMirror, .container .editor-toolbar {
    border-color: var(--background-tertiary) !important;
    background-color: var(--background-secondary) !important;
    color: var(--font) !important;
}
.CodeMirror-cursor {
    border-left-color: var(--heading) !important;
}

.cm-spell-error {
    background-color: rgba(255, 230, 0, 0.15) !important;
}

.cm-header-1 {
    color: var(--heading);
}

/* paginator */
.mat-paginator-page-size {
    display: none !important;
}

/* modals */
.modal-content,
.modal-header,
.modal-body {
    background-color: var(--background-primary) !important;
}

.modal-content:not(.small-modal-content) {
    min-width: 50vw;

    margin: 0 !important;
}

/* guild preview */

#markdown p {
  margin-bottom: 0 !important;
}

#markdown code {
  color: var(--font);
}

#markdown img {
    max-width: 50vw;
}

/* media */

/* <Small devices (landscape phones, 576px and up) */
@media (max-width: 576px) {
    /* sidebar */
    mat-sidenav {
        width: 100vw !important;
    }

    h1 {
        font-size: 10vw !important;
    }
}

/* sidebar */

.mat-drawer-side, .mat-drawer-container {
    background-color: var(--background-secondary) !important;
    border: none !important;
}

mat-sidenav a:not(.invite) {
    margin: 2px 10px;
    padding: 5px;
    padding-left: 10px !important;

    border-radius: 5px;
}
mat-sidenav a:not(a[href]).active {
    background-color: var(--background-primary) !important;
}
mat-sidenav a:not(a[href]):hover {
    color: var(--heading);
    background-color: var(--background-primary) !important;
}

.category {
    padding: 24px 0 4px 20px;

    font-size: 12px;
    text-transform: uppercase;
    font-weight: bold;

    color: var(--muted);
}
.category:hover {
    color: var(--heading);
    
    cursor: pointer;
}

